--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     <a href="#connect" class="toc-h2 toc-link" data-title="Connect">Connect</a>
                   </li>
                   <li>
-                    <a href="#deposit" class="toc-h2 toc-link" data-title="Deposit">Deposit</a>
+                    <a href="#walletdeposit" class="toc-h2 toc-link" data-title="WalletDeposit">WalletDeposit</a>
                   </li>
                   <li>
                     <a href="#discovernodes" class="toc-h2 toc-link" data-title="DiscoverNodes">DiscoverNodes</a>
@@ -322,7 +322,7 @@
                     <a href="#unban" class="toc-h2 toc-link" data-title="Unban">Unban</a>
                   </li>
                   <li>
-                    <a href="#withdraw" class="toc-h2 toc-link" data-title="Withdraw">Withdraw</a>
+                    <a href="#walletwithdraw" class="toc-h2 toc-link" data-title="WalletWithdraw">WalletWithdraw</a>
                   </li>
               </ul>
           </li>
@@ -1001,6 +1001,8 @@
   <span class="na">nodeIdentifier</span><span class="p">:</span> <span class="o">&lt;</span><span class="nx">string</span><span class="o">&gt;</span><span class="p">,</span>
   <span class="na">currency</span><span class="p">:</span> <span class="o">&lt;</span><span class="nx">string</span><span class="o">&gt;</span><span class="p">,</span>
   <span class="na">force</span><span class="p">:</span> <span class="o">&lt;</span><span class="nx">bool</span><span class="o">&gt;</span><span class="p">,</span>
+  <span class="na">destination</span><span class="p">:</span> <span class="o">&lt;</span><span class="nx">string</span><span class="o">&gt;</span><span class="p">,</span>
+  <span class="na">amount</span><span class="p">:</span> <span class="o">&lt;</span><span class="nx">uint64</span><span class="o">&gt;</span><span class="p">,</span>
 <span class="p">};</span>
 
 <span class="nx">xudClient</span><span class="p">.</span><span class="nx">closeChannel</span><span class="p">(</span><span class="nx">request</span><span class="p">,</span> <span class="kd">function</span><span class="p">(</span><span class="nx">err</span><span class="p">,</span> <span class="nx">response</span><span class="p">)</span> <span class="p">{</span>
@@ -1015,11 +1017,13 @@
   <span class="n">node_identifier</span><span class="o">=&lt;</span><span class="n">string</span><span class="o">&gt;</span><span class="p">,</span>
   <span class="n">currency</span><span class="o">=&lt;</span><span class="n">string</span><span class="o">&gt;</span><span class="p">,</span>
   <span class="n">force</span><span class="o">=&lt;</span><span class="nb">bool</span><span class="o">&gt;</span><span class="p">,</span>
+  <span class="n">destination</span><span class="o">=&lt;</span><span class="n">string</span><span class="o">&gt;</span><span class="p">,</span>
+  <span class="n">amount</span><span class="o">=&lt;</span><span class="n">uint64</span><span class="o">&gt;</span><span class="p">,</span>
 <span class="p">)</span>
 <span class="n">response</span> <span class="o">=</span> <span class="n">xudStub</span><span class="o">.</span><span class="n">CloseChannel</span><span class="p">(</span><span class="n">request</span><span class="p">)</span>
 <span class="k">print</span><span class="p">(</span><span class="n">response</span><span class="p">)</span>
 <span class="c"># Output: {}</span>
-</code></pre><pre class="highlight shell tab-shell"><code>  xucli closechannel &lt;node_identifier&gt; &lt;currency&gt; <span class="o">[</span>--force]
+</code></pre><pre class="highlight shell tab-shell"><code>  xucli closechannel &lt;currency&gt; <span class="o">[</span>node_identifier <span class="o">]</span> <span class="o">[</span>--force]
 </code></pre>
 <p>Closes any existing payment channels with a peer for the specified currency.</p>
 <h3 id='request-7'>Request</h3>
@@ -1044,6 +1048,16 @@
 <td>force</td>
 <td>bool</td>
 <td>Whether to force close the channel in case the peer is offline or unresponsive.</td>
+</tr>
+<tr>
+<td>destination</td>
+<td>string</td>
+<td>The on-chain address to send funds extracted from the channel. If unspecified, the funds return to the default wallet for the client closing the channel.</td>
+</tr>
+<tr>
+<td>amount</td>
+<td>uint64</td>
+<td>For Connext only - the amount to extract from the channel. If 0 or unspecified, the entire off-chain balance for the specified currency will be extracted.</td>
 </tr>
 </tbody></table>
 <h3 id='response-7'>Response</h3>
@@ -1085,11 +1099,11 @@
 </tbody></table>
 <h3 id='response-8'>Response</h3>
 <p>This response has no parameters.</p>
-<h2 id='deposit'>Deposit</h2><pre class="highlight javascript tab-javascript"><code><span class="kd">var</span> <span class="nx">request</span> <span class="o">=</span> <span class="p">{</span>
+<h2 id='walletdeposit'>WalletDeposit</h2><pre class="highlight javascript tab-javascript"><code><span class="kd">var</span> <span class="nx">request</span> <span class="o">=</span> <span class="p">{</span>
   <span class="na">currency</span><span class="p">:</span> <span class="o">&lt;</span><span class="nx">string</span><span class="o">&gt;</span><span class="p">,</span>
 <span class="p">};</span>
 
-<span class="nx">xudClient</span><span class="p">.</span><span class="nx">deposit</span><span class="p">(</span><span class="nx">request</span><span class="p">,</span> <span class="kd">function</span><span class="p">(</span><span class="nx">err</span><span class="p">,</span> <span class="nx">response</span><span class="p">)</span> <span class="p">{</span>
+<span class="nx">xudClient</span><span class="p">.</span><span class="nx">walletDeposit</span><span class="p">(</span><span class="nx">request</span><span class="p">,</span> <span class="kd">function</span><span class="p">(</span><span class="nx">err</span><span class="p">,</span> <span class="nx">response</span><span class="p">)</span> <span class="p">{</span>
   <span class="k">if</span> <span class="p">(</span><span class="nx">err</span><span class="p">)</span> <span class="p">{</span>
     <span class="nx">console</span><span class="p">.</span><span class="nx">error</span><span class="p">(</span><span class="nx">err</span><span class="p">);</span>
   <span class="p">}</span> <span class="k">else</span> <span class="p">{</span>
@@ -1103,13 +1117,13 @@
 </code></pre><pre class="highlight python tab-python"><code><span class="n">request</span> <span class="o">=</span> <span class="n">xud</span><span class="o">.</span><span class="n">DepositRequest</span><span class="p">(</span>
   <span class="n">currency</span><span class="o">=&lt;</span><span class="n">string</span><span class="o">&gt;</span><span class="p">,</span>
 <span class="p">)</span>
-<span class="n">response</span> <span class="o">=</span> <span class="n">xudStub</span><span class="o">.</span><span class="n">Deposit</span><span class="p">(</span><span class="n">request</span><span class="p">)</span>
+<span class="n">response</span> <span class="o">=</span> <span class="n">xudStub</span><span class="o">.</span><span class="n">WalletDeposit</span><span class="p">(</span><span class="n">request</span><span class="p">)</span>
 <span class="k">print</span><span class="p">(</span><span class="n">response</span><span class="p">)</span>
 <span class="c"># Output:</span>
 <span class="c"># {</span>
 <span class="c">#  "address": &lt;string&gt;</span>
 <span class="c"># }</span>
-</code></pre><pre class="highlight shell tab-shell"><code>  xucli deposit &lt;currency&gt;
+</code></pre><pre class="highlight shell tab-shell"><code>  xucli walletdeposit &lt;currency&gt;
 </code></pre>
 <p>Gets an address to deposit a given currency into the xud wallets.</p>
 <h3 id='request-9'>Request</h3>
@@ -1644,7 +1658,7 @@
 <span class="n">response</span> <span class="o">=</span> <span class="n">xudStub</span><span class="o">.</span><span class="n">OpenChannel</span><span class="p">(</span><span class="n">request</span><span class="p">)</span>
 <span class="k">print</span><span class="p">(</span><span class="n">response</span><span class="p">)</span>
 <span class="c"># Output: {}</span>
-</code></pre><pre class="highlight shell tab-shell"><code>  xucli openchannel &lt;node_identifier&gt; &lt;currency&gt; &lt;amount&gt;
+</code></pre><pre class="highlight shell tab-shell"><code>  xucli openchannel &lt;currency&gt; &lt;amount&gt; <span class="o">[</span>node_identifier] <span class="o">[</span>push_amount]
 </code></pre>
 <p>Opens a payment channel to a peer for the specified amount and currency.</p>
 <h3 id='request-18'>Request</h3>
@@ -2677,7 +2691,7 @@ xucli sell &lt;quantity&gt; &lt;pair_id&gt; &lt;price&gt; <span class="o">[</spa
 </tbody></table>
 <h3 id='response-27'>Response</h3>
 <p>This response has no parameters.</p>
-<h2 id='withdraw'>Withdraw</h2><pre class="highlight javascript tab-javascript"><code><span class="kd">var</span> <span class="nx">request</span> <span class="o">=</span> <span class="p">{</span>
+<h2 id='walletwithdraw'>WalletWithdraw</h2><pre class="highlight javascript tab-javascript"><code><span class="kd">var</span> <span class="nx">request</span> <span class="o">=</span> <span class="p">{</span>
   <span class="na">currency</span><span class="p">:</span> <span class="o">&lt;</span><span class="nx">string</span><span class="o">&gt;</span><span class="p">,</span>
   <span class="na">destination</span><span class="p">:</span> <span class="o">&lt;</span><span class="nx">string</span><span class="o">&gt;</span><span class="p">,</span>
   <span class="na">amount</span><span class="p">:</span> <span class="o">&lt;</span><span class="nx">uint64</span><span class="o">&gt;</span><span class="p">,</span>
@@ -2685,7 +2699,7 @@ xucli sell &lt;quantity&gt; &lt;pair_id&gt; &lt;price&gt; <span class="o">[</spa
   <span class="na">fee</span><span class="p">:</span> <span class="o">&lt;</span><span class="nx">uint32</span><span class="o">&gt;</span><span class="p">,</span>
 <span class="p">};</span>
 
-<span class="nx">xudClient</span><span class="p">.</span><span class="nx">withdraw</span><span class="p">(</span><span class="nx">request</span><span class="p">,</span> <span class="kd">function</span><span class="p">(</span><span class="nx">err</span><span class="p">,</span> <span class="nx">response</span><span class="p">)</span> <span class="p">{</span>
+<span class="nx">xudClient</span><span class="p">.</span><span class="nx">walletWithdraw</span><span class="p">(</span><span class="nx">request</span><span class="p">,</span> <span class="kd">function</span><span class="p">(</span><span class="nx">err</span><span class="p">,</span> <span class="nx">response</span><span class="p">)</span> <span class="p">{</span>
   <span class="k">if</span> <span class="p">(</span><span class="nx">err</span><span class="p">)</span> <span class="p">{</span>
     <span class="nx">console</span><span class="p">.</span><span class="nx">error</span><span class="p">(</span><span class="nx">err</span><span class="p">);</span>
   <span class="p">}</span> <span class="k">else</span> <span class="p">{</span>
@@ -2703,13 +2717,13 @@ xucli sell &lt;quantity&gt; &lt;pair_id&gt; &lt;price&gt; <span class="o">[</spa
   <span class="nb">all</span><span class="o">=&lt;</span><span class="nb">bool</span><span class="o">&gt;</span><span class="p">,</span>
   <span class="n">fee</span><span class="o">=&lt;</span><span class="n">uint32</span><span class="o">&gt;</span><span class="p">,</span>
 <span class="p">)</span>
-<span class="n">response</span> <span class="o">=</span> <span class="n">xudStub</span><span class="o">.</span><span class="n">Withdraw</span><span class="p">(</span><span class="n">request</span><span class="p">)</span>
+<span class="n">response</span> <span class="o">=</span> <span class="n">xudStub</span><span class="o">.</span><span class="n">WalletWithdraw</span><span class="p">(</span><span class="n">request</span><span class="p">)</span>
 <span class="k">print</span><span class="p">(</span><span class="n">response</span><span class="p">)</span>
 <span class="c"># Output:</span>
 <span class="c"># {</span>
 <span class="c">#  "transaction_id": &lt;string&gt;</span>
 <span class="c"># }</span>
-</code></pre><pre class="highlight shell tab-shell"><code>  xucli withdraw &lt;amount&gt; &lt;currency&gt; &lt;destination&gt; <span class="o">[</span>fee]
+</code></pre><pre class="highlight shell tab-shell"><code>  xucli withdraw <span class="o">[</span>amount] <span class="o">[</span>currency] &lt;destination&gt; <span class="o">[</span>fee]
 </code></pre>
 <p>Withdraws a given currency from the xud wallets to a specified address.</p>
 <h3 id='request-32'>Request</h3>
@@ -2908,6 +2922,16 @@ xucli sell &lt;quantity&gt; &lt;pair_id&gt; &lt;price&gt; <span class="o">[</spa
 <td>force</td>
 <td>bool</td>
 <td>Whether to force close the channel in case the peer is offline or unresponsive.</td>
+</tr>
+<tr>
+<td>destination</td>
+<td>string</td>
+<td>The on-chain address to send funds extracted from the channel. If unspecified, the funds return to the default wallet for the client closing the channel.</td>
+</tr>
+<tr>
+<td>amount</td>
+<td>uint64</td>
+<td>For Connext only - the amount to extract from the channel. If 0 or unspecified, the entire off-chain balance for the specified currency will be extracted.</td>
 </tr>
 </tbody></table>
 <h2 id='closechannelresponse'>CloseChannelResponse</h2>
